tests/ui/rfc-2632-const-trait-impl/const_derives/derive-const-gate.stderr
error[E0658]: use of unstable library feature 'derive_const'
  --> $DIR/derive-const-gate.rs:1:3
   |
LL | #[derive_const(Default)]
   |   ^^^^^^^^^^^^
   |
   = help: add `#![feature(derive_const)]` to the crate attributes to enable

error: const `impl` for trait `Default` which is not marked with `#[const_trait]`
  --> $DIR/derive-const-gate.rs:1:16
   |
LL | #[derive_const(Default)]
   |                ^^^^^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change
   = note: this error originates in the derive macro `Default` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
