tests/ui/rfc-2632-const-trait-impl/const_derives/derive-const-gate.rs
#[derive_const(Default)] //~ ERROR use of unstable library feature
pub struct S;

fn main() {}
